# slope

./: .gitignore  AUTHORS  CMakeLists.txt  README.md
demos/: CMakeLists.txt  animation.c  plot_stack.c  simple.c  widgets.c
slope/: CMakeLists.txt
slope/include/slope/: drawing.h  figure.h  item.h  legend.h  scale.h  xyaxis.h
slope/source/slope/: chart.c  drawing.c  figure.c  item.c  item_p.h  legend.c  sampler.c  scale.c  scale_p.h  view.c  xyaxis.c  xyscale.c  xyseries.c
